[tool.poetry]
name = "jlr-video-project"
version = "0.1.0"
description = ""
authors = ["Tomos Williams <tomos.williams@cetrix.co.uk>"]
readme = "README.md"
packages = [{include = "jlr_video_project"}]

[tool.poetry.dependencies]
python = "^3.10"
poetry = "^1.2.1"
black = "^22.8.0"
boto3 = "^1.24.87"
moto = "^4.0.6"
pytest = "^7.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
